--- a/public/index.html
+++ b/public/index.html
@@ -3,39 +3,54 @@
 <head>
   <meta charset="UTF-8">
   <title>Inventory Management System</title>
-  <style>
-/* ================= GLOBAL ================= */
+<style>
+/* ================= RESET ================= */
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
+/* ================= BACKGROUND ================= */
 body {
-  margin: 0;
-  font-family: "Inter", "Segoe UI", Roboto, Arial, sans-serif;
-  background: radial-gradient(circle at top, #1e3c72 0%, #0f2027 40%, #0b132b 100%);
+  font-family: "Inter", "Segoe UI", Roboto, sans-serif;
   min-height: 100vh;
-  color: #eaeaea;
+  color: #eaeaf0;
+  background:
+    radial-gradient(circle at 10% 10%, #2a3cff55, transparent 40%),
+    radial-gradient(circle at 90% 20%, #00ffd555, transparent 40%),
+    linear-gradient(135deg, #050b1e, #0b1538);
+  animation: bgMove 18s ease infinite;
+}
+
+@keyframes bgMove {
+  0% { background-position: 0% 0%, 100% 0%, 0% 0%; }
+  50% { background-position: 100% 100%, 0% 100%, 100% 100%; }
+  100% { background-position: 0% 0%, 100% 0%, 0% 0%; }
 }
 
 /* ================= HEADER ================= */
 header {
-  backdrop-filter: blur(12px);
-  background: rgba(255,255,255,0.08);
-  border-bottom: 1px solid rgba(255,255,255,0.15);
-  padding: 16px 30px;
   position: sticky;
   top: 0;
   z-index: 100;
+  backdrop-filter: blur(16px);
+  background: rgba(255,255,255,0.08);
+  border-bottom: 1px solid rgba(255,255,255,0.15);
+  box-shadow: 0 10px 30px rgba(0,0,0,0.6);
+}
+
+nav {
+  padding: 18px 35px;
 }
 
 nav a {
   color: #fff;
-  margin-right: 24px;
+  margin-right: 26px;
+  font-weight: 700;
+  letter-spacing: 0.4px;
   text-decoration: none;
-  font-weight: 600;
-  letter-spacing: 0.3px;
   position: relative;
-  padding-bottom: 6px;
   transition: all 0.3s ease;
 }
 
@@ -43,12 +58,12 @@ nav a::after {
   content: "";
   position: absolute;
   left: 0;
-  bottom: 0;
-  width: 0%;
+  bottom: -6px;
   height: 3px;
-  background: linear-gradient(90deg, #ffd700, #ff8c00);
-  transition: width 0.3s ease;
-  border-radius: 5px;
+  width: 0%;
+  background: linear-gradient(90deg, #00ffd5, #4facfe);
+  border-radius: 10px;
+  transition: width 0.35s ease;
 }
 
 nav a:hover::after,
@@ -58,127 +73,140 @@ nav a.active::after {
 
 /* ================= MAIN ================= */
 main {
-  padding: 30px;
+  padding: 35px;
 }
 
 section {
   display: none;
-  animation: fadeSlide 0.5s ease;
+  animation: sectionIn 0.6s cubic-bezier(.2,.8,.2,1);
 }
 
 section.active {
   display: block;
 }
 
-@keyframes fadeSlide {
-  from { opacity: 0; transform: translateY(12px); }
-  to { opacity: 1; transform: translateY(0); }
+@keyframes sectionIn {
+  from { opacity: 0; transform: translateY(18px) scale(0.98); }
+  to { opacity: 1; transform: translateY(0) scale(1); }
 }
 
 /* ================= HEADINGS ================= */
 h2 {
-  color: #ffd700;
-  margin-bottom: 15px;
+  font-size: 26px;
+  margin-bottom: 18px;
+  background: linear-gradient(90deg, #00ffd5, #4facfe);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 h3 {
-  color: #bfc9ff;
-  margin-top: 25px;
+  margin-top: 30px;
+  color: #b9c6ff;
 }
 
 /* ================= DASHBOARD ================= */
 .flex {
   display: flex;
   flex-wrap: wrap;
-  gap: 22px;
+  gap: 24px;
 }
 
 .card {
-  background: linear-gradient(135deg, rgba(255,255,255,0.18), rgba(255,255,255,0.06));
-  backdrop-filter: blur(14px);
-  border-radius: 18px;
-  padding: 20px;
-  min-width: 210px;
-  box-shadow: 0 12px 30px rgba(0,0,0,0.4);
-  transition: all 0.3s ease;
-  border: 1px solid rgba(255,255,255,0.2);
+  position: relative;
+  min-width: 220px;
+  padding: 22px;
+  border-radius: 22px;
+  background: linear-gradient(
+    135deg,
+    rgba(255,255,255,0.22),
+    rgba(255,255,255,0.06)
+  );
+  backdrop-filter: blur(20px);
+  border: 1px solid rgba(255,255,255,0.25);
+  box-shadow: 0 25px 60px rgba(0,0,0,0.6);
+  transition: all 0.35s ease;
+}
+
+.card::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 22px;
+  background: linear-gradient(120deg, transparent, #00ffd540, transparent);
+  opacity: 0;
+  transition: opacity 0.4s;
+}
+
+.card:hover::before {
+  opacity: 1;
 }
 
 .card:hover {
-  transform: translateY(-8px) scale(1.03);
-  box-shadow: 0 20px 45px rgba(0,0,0,0.6);
-}
-
-.card span {
-  font-size: 20px;
-  font-weight: 700;
+  transform: translateY(-12px) scale(1.04);
 }
 
 /* ================= PILLS ================= */
 .pill {
-  display: inline-block;
-  padding: 6px 14px;
-  border-radius: 30px;
+  padding: 7px 16px;
+  border-radius: 999px;
   font-size: 12px;
-  font-weight: 700;
-  letter-spacing: 0.4px;
+  font-weight: 800;
 }
 
 .pill.cash {
-  background: linear-gradient(90deg, #43e97b, #38f9d7);
-  color: #003b2f;
+  background: linear-gradient(90deg, #00ffd5, #00ff9d);
+  color: #003c32;
 }
 
 .pill.online {
   background: linear-gradient(90deg, #4facfe, #00f2fe);
-  color: #002f4b;
+  color: #002c4a;
 }
 
 .pill.borrow {
-  background: linear-gradient(90deg, #fa709a, #fee140);
-  color: #4b1c00;
+  background: linear-gradient(90deg, #ff416c, #ffb347);
+  color: #3a0000;
 }
 
 /* ================= FORMS ================= */
 .form-row {
-  margin-bottom: 14px;
+  margin-bottom: 16px;
 }
 
 label {
-  display: inline-block;
   width: 160px;
-  font-weight: 600;
-  color: #ddd;
+  display: inline-block;
+  font-weight: 700;
+  color: #e3e8ff;
 }
 
 input, select {
-  padding: 10px 12px;
-  border-radius: 10px;
-  border: 1px solid rgba(255,255,255,0.25);
-  background: rgba(255,255,255,0.12);
+  padding: 12px 14px;
+  border-radius: 14px;
+  background: rgba(255,255,255,0.14);
+  border: 1px solid rgba(255,255,255,0.3);
   color: #fff;
   font-size: 14px;
 }
 
 input:focus, select:focus {
   outline: none;
-  border-color: #ffd700;
-  box-shadow: 0 0 0 2px rgba(255,215,0,0.3);
+  border-color: #00ffd5;
+  box-shadow: 0 0 0 3px rgba(0,255,213,0.35);
 }
 
 /* ================= BUTTONS ================= */
 button {
-  padding: 9px 16px;
-  border-radius: 10px;
-  border: none;
+  padding: 10px 18px;
+  border-radius: 14px;
+  font-weight: 800;
   cursor: pointer;
-  font-weight: 700;
-  letter-spacing: 0.4px;
-  transition: all 0.25s ease;
+  border: none;
+  transition: all 0.3s ease;
 }
 
 button:hover {
-  transform: translateY(-2px) scale(1.05);
+  transform: translateY(-3px) scale(1.08);
 }
 
 .btn-primary {
@@ -187,13 +215,12 @@ button:hover {
 }
 
 .btn-success {
-  background: linear-gradient(135deg, #11998e, #38ef7d);
-  color: #003f2d;
+  background: linear-gradient(135deg, #00c9ff, #92fe9d);
+  color: #003f2f;
 }
 
 .btn-danger {
   background: linear-gradient(135deg, #ff416c, #ff4b2b);
-  color: #fff;
 }
 
 .btn-warning {
@@ -203,31 +230,29 @@ button:hover {
 
 .btn-secondary {
   background: linear-gradient(135deg, #485563, #29323c);
-  color: #fff;
 }
 
-/* ================= TABLES ================= */
+/* ================= TABLE ================= */
 table {
   width: 100%;
+  margin-top: 18px;
   border-collapse: collapse;
-  margin-top: 16px;
-  background: rgba(255,255,255,0.08);
-  backdrop-filter: blur(10px);
-  border-radius: 14px;
+  background: rgba(255,255,255,0.1);
+  backdrop-filter: blur(16px);
+  border-radius: 18px;
   overflow: hidden;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.4);
+  box-shadow: 0 20px 50px rgba(0,0,0,0.6);
 }
 
 th {
-  background: rgba(255,255,255,0.18);
-  padding: 12px;
+  background: rgba(255,255,255,0.2);
+  padding: 14px;
   font-size: 14px;
 }
 
 td {
-  padding: 11px;
-  font-size: 13.5px;
-  border-top: 1px solid rgba(255,255,255,0.15);
+  padding: 13px;
+  border-top: 1px solid rgba(255,255,255,0.18);
 }
 
 tr {
@@ -235,72 +260,65 @@ tr {
 }
 
 tr:hover td {
-  background: rgba(255,255,255,0.15);
+  background: rgba(0,255,213,0.12);
 }
 
 /* ================= STATUS ================= */
-.near-expiry {
-  background: rgba(255,193,7,0.25) !important;
-}
-
-.expired {
-  background: rgba(220,53,69,0.3) !important;
-}
+.near-expiry { background: rgba(255,193,7,0.3) !important; }
+.expired { background: rgba(255,0,0,0.3) !important; }
 
 /* ================= MESSAGES ================= */
 .msg {
-  padding: 12px;
-  margin: 12px 0;
-  border-radius: 10px;
-  font-weight: 700;
+  padding: 14px;
+  margin: 14px 0;
+  border-radius: 14px;
+  font-weight: 800;
 }
 
 .msg.success {
-  background: rgba(40,167,69,0.25);
-  color: #7CFFB2;
+  background: rgba(0,255,157,0.25);
+  color: #6dffcb;
 }
 
 .msg.error {
-  background: rgba(220,53,69,0.25);
-  color: #FF9C9C;
+  background: rgba(255,65,108,0.25);
+  color: #ff9ab0;
 }
 
 /* ================= BILL DETAILS ================= */
 .bill-detail {
+  padding: 24px;
+  border-radius: 24px;
   background: rgba(255,255,255,0.12);
-  backdrop-filter: blur(14px);
-  padding: 20px;
-  border-radius: 18px;
-  box-shadow: 0 15px 40px rgba(0,0,0,0.6);
+  backdrop-filter: blur(18px);
+  box-shadow: 0 25px 60px rgba(0,0,0,0.65);
 }
 
 /* ================= TOTALS ================= */
 .bills-filter-bar,
 .bills-totals {
+  padding: 18px;
+  border-radius: 20px;
   background: rgba(255,255,255,0.12);
-  backdrop-filter: blur(12px);
-  padding: 16px;
-  border-radius: 16px;
-  margin-top: 15px;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+  backdrop-filter: blur(16px);
+  box-shadow: 0 18px 45px rgba(0,0,0,0.6);
 }
 
-/* ================= RESPONSIVE ================= */
+/* ================= MOBILE ================= */
 @media (max-width: 768px) {
   label {
     width: 100%;
     margin-bottom: 6px;
   }
-
   input, select {
     width: 100%;
   }
-
   .flex {
     flex-direction: column;
   }
 }
 </style>
+
 
 </head>
 <body>
@@ -1181,6 +1199,7 @@ loadDashboard();
 </script>
 </body>
 </html>
+
 
 
 
