--- a/public/index.html
+++ b/public/index.html
@@ -18,68 +18,72 @@
 
 /* ================= RESET ================= */
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", system-ui, sans-serif;
 }
 
-/* ================= BACKGROUND (DYNAMIC) ================= */
+/* ================= BACKGROUND ================= */
 body {
-  font-family: 'Inter', system-ui, sans-serif;
   min-height: 100vh;
-  color: #ffffff;
-  background:
-    radial-gradient(circle at 20% 10%, #00ffd533, transparent 40%),
-    radial-gradient(circle at 80% 30%, #4facfe33, transparent 45%),
-    linear-gradient(135deg, var(--bg1), var(--bg2));
-  animation: bgShift 20s infinite alternate ease-in-out;
+  background: linear-gradient(120deg, #0f2027, #203a43, #2c5364);
+  background-size: 300% 300%;
+  animation: bgMove 12s ease infinite;
+  color: #fff;
 }
 
-@keyframes bgShift {
-  from { background-position: 0% 0%, 100% 0%, 0% 0%; }
-  to { background-position: 100% 100%, 0% 100%, 100% 100%; }
+@keyframes bgMove {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
 }
 
 /* ================= HEADER ================= */
 header {
   position: sticky;
   top: 0;
-  z-index: 999;
-  backdrop-filter: blur(25px);
-  background: rgba(0,0,0,0.45);
-  box-shadow: 0 15px 40px rgba(0,0,0,0.7);
+  z-index: 1000;
+  background: rgba(0,0,0,0.55);
+  backdrop-filter: blur(20px);
+  padding: 18px 40px;
+  box-shadow: 0 10px 40px rgba(0,0,0,0.6);
 }
 
+header h1 {
+  font-size: 22px;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+
+/* ================= NAV ================= */
 nav {
   display: flex;
-  gap: 35px;
-  padding: 20px 40px;
+  gap: 30px;
 }
 
 nav a {
-  color: #fff;
-  font-weight: 700;
-  text-decoration: none;
-  opacity: 0.6;
   position: relative;
-  transition: 0.4s;
+  color: #ccc;
+  font-size: 14px;
+  text-decoration: none;
+  transition: 0.3s;
 }
 
 nav a::after {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
-  bottom: -8px;
-  width: 0;
-  height: 3px;
-  background: linear-gradient(90deg, var(--primary), var(--secondary));
-  border-radius: 10px;
-  transition: 0.4s;
+  bottom: -6px;
+  width: 0%;
+  height: 2px;
+  background: #00ffd5;
+  transition: 0.3s;
 }
 
 nav a:hover,
 nav a.active {
-  opacity: 1;
+  color: #00ffd5;
 }
 
 nav a:hover::after,
@@ -89,216 +93,186 @@ nav a.active::after {
 
 /* ================= MAIN ================= */
 main {
-  padding: 40px;
-  max-width: 1500px;
+  max-width: 1400px;
   margin: auto;
+  padding: 40px;
 }
 
-section {
-  display: none;
-  animation: fadeUp 0.7s ease;
-}
-
-section.active {
-  display: block;
-}
-
-@keyframes fadeUp {
-  from { opacity: 0; transform: translateY(25px); }
-  to { opacity: 1; transform: translateY(0); }
-}
-
-/* ================= HEADINGS ================= */
-h2 {
-  font-size: 30px;
-  margin-bottom: 25px;
-  background: linear-gradient(90deg, var(--primary), var(--secondary));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-/* ================= DASHBOARD ================= */
-.flex {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
-  gap: 28px;
-}
-
+/* ================= CARDS ================= */
 .card {
+  background: rgba(255,255,255,0.12);
+  backdrop-filter: blur(18px);
+  border-radius: 30px;
+  padding: 28px;
+  border: 1px solid rgba(255,255,255,0.25);
+  box-shadow: 0 30px 80px rgba(0,0,0,0.8);
+  transition: all 0.4s ease;
   position: relative;
-  padding: 30px;
-  border-radius: 28px;
-  background: var(--glass);
-  backdrop-filter: blur(25px);
-  border: 1px solid var(--glass-border);
-  box-shadow: 0 25px 70px rgba(0,0,0,0.8);
-  transition: 0.4s;
+  overflow: hidden;
 }
 
 .card::before {
-  content: '';
+  content: "";
   position: absolute;
-  inset: -1px;
-  border-radius: 28px;
-  background: linear-gradient(120deg, transparent, var(--primary), transparent);
-  opacity: 0;
-  transition: 0.4s;
+  inset: 0;
+  background: linear-gradient(120deg, transparent, rgba(255,255,255,0.2), transparent);
+  transform: translateX(-100%);
 }
 
 .card:hover::before {
-  opacity: 0.6;
+  transform: translateX(100%);
+  transition: 0.8s;
 }
 
 .card:hover {
-  transform: translateY(-12px) scale(1.05);
+  transform: translateY(-10px) scale(1.02);
+  box-shadow: 0 45px 120px rgba(0,255,213,0.25);
+}
+
+.card strong {
+  font-size: 14px;
+  opacity: 0.8;
 }
 
 .card span {
-  font-size: 26px;
-  font-weight: 900;
+  display: block;
+  font-size: 28px;
+  font-weight: 800;
+  margin-top: 6px;
+  color: #00ffd5;
 }
 
 /* ================= FORMS ================= */
-.form-row {
-  display: flex;
-  gap: 18px;
-  align-items: center;
-  margin-bottom: 18px;
-}
-
-label {
-  width: 160px;
-  opacity: 0.85;
-}
-
 input, select {
-  flex: 1;
-  padding: 14px 16px;
-  border-radius: 18px;
-  background: rgba(255,255,255,0.18);
+  background: rgba(255,255,255,0.15);
   border: none;
+  border-radius: 14px;
+  padding: 14px 16px;
   color: #fff;
-  font-size: 14px;
+  outline: none;
+  transition: 0.3s;
+}
+
+input::placeholder {
+  color: rgba(255,255,255,0.6);
 }
 
 input:focus, select:focus {
-  outline: none;
-  box-shadow: 0 0 0 3px var(--primary);
+  box-shadow: 0 0 0 2px #00ffd5;
+  background: rgba(255,255,255,0.22);
 }
 
 /* ================= BUTTONS ================= */
 button {
-  padding: 12px 22px;
-  border-radius: 18px;
   border: none;
-  font-weight: 800;
+  border-radius: 16px;
+  padding: 14px 22px;
+  font-weight: 600;
+  letter-spacing: 0.6px;
   cursor: pointer;
-  transition: 0.3s;
-}
-
-button:hover {
-  transform: translateY(-4px) scale(1.08);
-  filter: brightness(1.15);
-}
-
-button:active {
-  transform: scale(0.95);
+  transition: all 0.3s ease;
 }
 
 .btn-primary {
-  background: linear-gradient(135deg, #667eea, #764ba2);
+  background: linear-gradient(135deg, #00ffd5, #00c6ff);
+  color: #000;
+  box-shadow: 0 20px 50px rgba(0,255,213,0.45);
 }
 
-.btn-success {
-  background: linear-gradient(135deg, #00ffcc, #00ff9d);
-  color: #003f2f;
+.btn-primary:hover {
+  transform: translateY(-4px);
+  box-shadow: 0 30px 80px rgba(0,255,213,0.75);
 }
 
 .btn-danger {
   background: linear-gradient(135deg, #ff416c, #ff4b2b);
+  color: #fff;
 }
 
-.btn-warning {
-  background: linear-gradient(135deg, #f7971e, #ffd200);
-}
-
-.btn-secondary {
-  background: linear-gradient(135deg, #485563, #29323c);
+.btn-danger:hover {
+  transform: translateY(-4px);
+  box-shadow: 0 25px 70px rgba(255,75,43,0.7);
 }
 
 /* ================= TABLE ================= */
 table {
   width: 100%;
-  border-collapse: collapse;
-  border-radius: 22px;
-  overflow: hidden;
+  border-collapse: separate;
+  border-spacing: 0 12px;
   margin-top: 25px;
-  background: var(--glass);
 }
 
-th {
-  padding: 16px;
-  background: rgba(255,255,255,0.18);
-  text-transform: uppercase;
-  font-size: 12px;
+thead th {
+  text-align: left;
+  font-size: 13px;
+  opacity: 0.8;
+  padding: 10px;
+}
+
+tbody tr {
+  background: rgba(255,255,255,0.12);
+  backdrop-filter: blur(15px);
+  transition: 0.35s;
+}
+
+tbody tr:hover {
+  transform: scale(1.02);
+  background: rgba(0,255,213,0.15);
 }
 
 td {
-  padding: 15px;
-  border-top: 1px solid rgba(255,255,255,0.15);
-}
-
-tr:hover td {
-  background: rgba(0,255,213,0.12);
+  padding: 14px;
+  font-size: 14px;
 }
 
 /* ================= STATUS ================= */
-.near-expiry {
-  background: rgba(255,193,7,0.35) !important;
-}
-
 .expired {
-  background: rgba(255,0,0,0.35) !important;
+  box-shadow: inset 5px 0 0 #ff4b2b;
 }
 
-/* ================= BILL DETAIL ================= */
-.bill-detail {
-  border-radius: 30px;
-  border: 1px solid var(--glass-border);
+.near-expiry {
+  box-shadow: inset 5px 0 0 #ffd200;
 }
 
-/* ================= MESSAGES ================= */
+/* ================= MESSAGE ================= */
 .msg {
-  padding: 16px;
-  border-radius: 18px;
-  margin-top: 14px;
-  animation: pop 0.4s ease;
+  padding: 14px 20px;
+  border-radius: 16px;
+  background: linear-gradient(135deg, #00ffd5, #00c6ff);
+  color: #000;
+  animation: popIn 0.5s ease;
 }
 
-@keyframes pop {
-  from { transform: scale(0.9); opacity: 0; }
-  to { transform: scale(1); opacity: 1; }
+@keyframes popIn {
+  from { opacity: 0; transform: scale(0.8); }
+  to { opacity: 1; transform: scale(1); }
 }
 
 /* ================= SCROLLBAR ================= */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(var(--primary), var(--secondary));
+  background: linear-gradient(#00ffd5, #00c6ff);
   border-radius: 10px;
 }
 
 /* ================= MOBILE ================= */
 @media (max-width: 768px) {
-  .form-row {
-    flex-direction: column;
+  main {
+    padding: 20px;
   }
+
+  nav {
+    overflow-x: auto;
+  }
+
   button {
     width: 100%;
   }
 }
+
 
 </style>
 
@@ -1182,6 +1156,7 @@ loadDashboard();
 </script>
 </body>
 </html>
+
 
 
 
